2019/08/06 日本語の外部化完成。 照屋

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,1 +1,17 @@
-hello.welcome=こんにちは、世界の皆様へ
+view.label.casefacter=[案件 要因]
+view.label.freeword=フリーワード:
+view.btn.search=検索
+view.searchword=検索したいワードを入れてください
+view.btn.ascdate=日付昇順
+view.btn.descdate=日付降順
+view.btn.asccost=単金昇順
+view.btn.desccost=単金降順
+view.btn.ascage=年齢昇順
+view.btn.descage=年齢降順
+view.btn.details=本文詳細
+view.tablelabel.date=日付
+view.tablelabel.cost=単金
+view.tablelabel.age=年齢
+view.tablelabel.sender=送信者
+view.tablelabel.subject=件名
+view.btn.return=戻る
