2019/08/06 日本語外部化修正 　照屋

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -14,4 +14,7 @@ view.tablelabel.cost=単金
 view.tablelabel.age=年齢
 view.tablelabel.sender=送信者
 view.tablelabel.subject=件名
+view.index.title=Result2
+view.searchResults.title=Result2 検索結果
 view.btn.return=戻る
+view.label.searchtitle=メール検索
