2019/08/07 メソッドコメントを追加しました。照屋

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,4 +1,4 @@
-view.label.casefacter=[案件 要因]
+view.label.casefacter=[案件 要員]
 view.label.freeword=フリーワード:
 view.btn.search=検索
 view.searchword=検索したいワードを入れてください
