とりあえず再度コミット

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,5 +1,8 @@
 view.label.casefacter=[案件 要員]
 view.label.freeword=フリーワード:
+view.label.incase=件中
+view.label.tilde=～
+view.label.preview=件表示中
 view.btn.search=検索
 view.searchword=検索したいワードを入れてください
 view.btn.ascdate=日付昇順
