ソート機能のリンク化 by 高野

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -18,3 +18,5 @@ view.index.title=Result2
 view.searchResults.title=Result2 検索結果
 view.btn.return=戻る
 view.label.searchtitle=メール検索
+view.btn.asc=▲
+view.btn.desc=▼
