2019/08/15 消えていたコメント、日本語外部化を再度加えました。

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -20,3 +20,6 @@ view.btn.return=戻る
 view.label.searchtitle=メール検索
 view.btn.asc=▲
 view.btn.desc=▼
+view.label.incase=件中
+view.label.tilde=～
+view.label.display=件表示中
