placeholderの外部化 by高野

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -4,7 +4,7 @@ view.label.incase=件中
 view.label.tilde=～
 view.label.preview=件表示中
 view.btn.search=検索
-view.searchword=検索したいワードを入れてください
+view.searchword=検索ワードを入力
 view.btn.ascdate=日付昇順
 view.btn.descdate=日付降順
 view.btn.asccost=単金昇順
@@ -23,3 +23,4 @@ view.btn.return=戻る
 view.label.searchtitle=メール検索
 view.btn.asc=▲
 view.btn.desc=▼
+view.shanterylog=シャンテリーロゴ
