Result2Utilのコメントの追加 by高野

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -23,4 +23,4 @@ view.label.searchtitle=Result2
 view.btn.asc=▲
 view.btn.desc=▼
 view.no.results=検索結果が0件です
-view.shanterylog=シャンテリーロゴ
+view.shanterylogo=シャンテリーロゴ
