０件の場合、メッセージを表示 テーブル高さを保持 タイトル変更 byまっきー

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,4 +1,3 @@
-view.label.casefacter=[案件 要員]
 view.label.freeword=フリーワード:
 view.label.incase=件中
 view.label.tilde=～
@@ -20,6 +19,7 @@ view.tablelabel.subject=件名
 view.index.title=Result2
 view.searchResults.title=Result2 検索結果
 view.btn.return=戻る
-view.label.searchtitle=メール検索
+view.label.searchtitle=Result2
 view.btn.asc=▲
 view.btn.desc=▼
+view.no.results=検索結果が0件です
