人材情報と案件情報の追加 by高野

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -24,3 +24,5 @@ view.label.searchtitle=メール検索
 view.btn.asc=▲
 view.btn.desc=▼
 view.shanterylog=シャンテリーロゴ
+view.btn.humanresource=人材情報
+view.btn.work=案件情報
