2019/08/28 単金と年齢の単位追加　照屋

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -26,3 +26,5 @@ view.shanterylog=シャンテリーロゴ
 view.btn.humanresource=人材情報
 view.btn.work=案件情報
 view.no.results=検索結果が0件です
+view.tablelabel.costman={0}万
+view.tablelabel.ageage={0}歳
